# borzoi

./: .gitignore  .nvim.lua  AGENTS.md  CLAUDE.md  Cargo.toml  LICENCE_fsharp.md  LICENSE-MIT  README.md  clippy.toml  flake.nix
crates/assembly/: Cargo.toml
crates/assembly/examples/: enum_sweep.rs
crates/assembly/proptest-regressions/reader/: signature_tests.txt
crates/assembly/src/: display.rs  doc_id.rs  ecma335_assembly.rs  error.rs  fsharp_pickle_merge.rs  fsharp_resource.rs  lib.rs  model.rs  modifier_metamorphic.rs  test_support.rs  view.rs
crates/assembly/src/fsharp_pickle/: access.rs  attribs.rs  constraints.rs  consts.rs  entity.rs  expr.rs  header.rs  il.rs  leaves.rs  measure.rs  mod.rs  model.rs  osgn.rs  reader.rs  repr.rs  typar.rs  types.rs  val.rs  vrefs.rs
crates/assembly/src/pdb/: metadata.rs  mod.rs
crates/assembly/src/reader/: attributes.rs  attributes_tests.rs  cursor.rs  ids.rs  image.rs  image_tests.rs  manifest.rs  manifest_tests.rs  members.rs  members_tests.rs  metadata.rs  mod.rs  model.rs  signature.rs  signature_tests.rs  tables.rs  test_fixtures.rs  tests.rs  typedefs.rs  typedefs_tests.rs
crates/assembly/tests/all/: abbreviation_target_diff.rs  assembly_auto_opens.rs  assembly_diff.rs  bcl_ref_pack_sweep.rs  display_member.rs  display_type.rs  doc_id_diff.rs  doc_id_fsharp_core_diff.rs  explicit_interface.rs  fail_loud.rs  fsharp_pickle_diff.rs  fsharp_pickle_fail_loud.rs  fsharp_pickle_fsharp_core.rs  fsharp_pickle_module_member_index.rs  generative_source_diff.rs  main.rs  methodimpl_classification.rs  modifier_metamorphic.rs  pdb_fsharp_core.rs  pickled_ranges.rs  projector_custom_modifiers.rs  projector_default_member.rs  projector_events.rs  projector_extension_index.rs  projector_fsharp_core.rs  projector_generic_nullability.rs  projector_generics.rs  projector_malformed_metadata.rs  projector_markers.rs  projector_member_shapes.rs  projector_nullable.rs  projector_obsolete_experimental.rs  projector_open_surface.rs  projector_overload_flags.rs  projector_ref_nullability.rs  projector_required_members.rs  projector_source_names.rs  projector_type_shapes.rs  projector_typeref_shapes.rs  well_known_attributes_sync.rs
crates/corpus-diff/: Cargo.toml
crates/corpus-diff/src/: lib.rs  main.rs
crates/corpus-diff/tests/: project_resolution.rs
crates/cst/: Cargo.toml
crates/cst/examples/: lex_filter_one.rs  lex_one.rs  parse_bench.rs
crates/cst/proptest-regressions/directives/: driver.txt
crates/cst/proptest-regressions/lexfilter/: position_tests.txt
crates/cst/src/: language_version.rs  lib.rs
crates/cst/src/directives/: driver.rs  expr.rs  line.rs  line_store.rs  mod.rs
crates/cst/src/lexer/: callbacks.rs  interp.rs  mod.rs  tests.rs
crates/cst/src/lexfilter/: balance.rs  continuators.rs  head_transitions.rs  interp_parens.rs  mod.rs  offside_pops.rs  position_tests.rs  predispatch.rs  pushes.rs  typars_close_op.rs  undentation_tests.rs
crates/cst/src/parser/: classify.rs  cursor.rs  decls.rs  decls_binding.rs  decls_member.rs  decls_recover.rs  decls_repr.rs  decls_sig.rs  decls_type.rs  escapes.rs  expr.rs  expr_app.rs  expr_atom.rs  expr_control.rs  expr_op.rs  measure.rs  mod.rs  numeric.rs  pat.rs  sign_fold.rs  strings.rs  types.rs
crates/cst/src/syntax/: kinds.rs  mod.rs  projection.rs
crates/cst/tests/all/: ast_projection.rs  corpus.rs  corpus_walk.rs  fcs_divergence.rs  kind_name_totality.proptest-regressions  kind_name_totality.rs  langversion_gate.rs  lexer_diff.rs  lexfilter_corpus.rs  lexfilter_depth.rs  line_index.rs  main.rs  (+70 more)
crates/lsp/: Cargo.toml  build.rs
crates/lsp/proptest-regressions/: glob.txt  position.txt  project_graph.txt  workspace.txt
crates/lsp/src/: assembly_cache.rs  cst_panic_safe.rs  diagnostics.rs  fsproj_diagnostics.rs  glob.rs  glob_resolver.rs  goto_source.rs  lib.rs  logging.rs  main.rs  paths.rs  position.rs  project_graph.rs  publish.rs  pull.rs  restore.rs  sdk_discovery.rs  semantic.rs  server.rs  sidecar_manager.rs  spawn.rs  telemetry.rs  test_trace.rs  workspace.rs
crates/msbuild/: Cargo.toml
crates/msbuild/proptest-regressions/: condition.txt  tests.txt  with_imports_tests.txt
crates/msbuild/src/: condition.rs  diagnostic.rs  evaluator.rs  imports.rs  lib.rs  sdk_resolver.rs  target_frameworks.rs  test_support.rs  tests.rs  with_imports_tests.rs
crates/msbuild/tests/: condition_diff.rs  condition_properties.rs  escaping_diff.rs  fsproj_corpus.rs  fsproj_environment_diff.rs  fsproj_extract.rs  fsproj_implicit_imports.rs  fsproj_item_escape_generative_diff.rs  fsproj_msbuild_corpus_diff.rs  fsproj_msbuild_diff.rs  fsproj_packageref_diff.rs  fsproj_packageref_generative_diff.proptest-regressions  fsproj_packageref_generative_diff.rs  fsproj_packageref_identity_generative_diff.rs  fsproj_property_table_diff.rs  fsproj_target_frameworks_diff.rs  path_fixup_diff.rs  property_expr_diff.rs  sdk_chain_expression_census.rs
crates/nuget/: Cargo.toml
crates/nuget/src/: assets.rs  framework.rs  lib.rs  package.rs  range.rs  resolver.rs  version.rs
crates/nuget/tests/: compile_assets.rs  compile_assets_diff.rs  compile_assets_properties.rs  compile_assets_restore.rs  framework_diff.rs  framework_exhaustive.rs  framework_properties.rs  nuspec_diff.rs  package_cache.rs  range_diff.rs  range_properties.rs  resolver.rs  resolver_complexity.rs  resolver_diff.rs  soak.rs  version_diff.rs  version_properties.proptest-regressions  version_properties.rs
crates/oracle-harness/: Cargo.toml
crates/oracle-harness/proptest-regressions/: module_tree.txt
crates/oracle-harness/src/: lib.rs  module_tree.rs  panic_silence.rs
crates/oracle-harness/tests/: batch_recovery.rs  panic_silence.rs
crates/sema/: Cargo.toml
crates/sema/proptest-regressions/: infer.txt  unify.txt
crates/sema/src/: assembly_env.rs  binders.rs  def.rs  diagnostics.rs  expr_shape.rs  infer.rs  lib.rs  member_ty.rs  overload.rs  qnof.rs  resolve.rs  ty.rs  unify.rs
tools/astgen/: Cargo.toml
tools/astgen/examples/: generate.rs
tools/astgen/src/: lib.rs
tools/astgen/tests/: up_to_date.rs
(+432 files in other folders)
