[package]
name = "borzoi-nuget"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
roxmltree = "0.21"

[dev-dependencies]
# The resident `nuget-oracle` driver (`BatchChild`) and the bounded one-shot
# `dotnet build` driver (`BoundedCommand`, re-exported from `borzoi-spawn`),
# so every wait on a child runs under a deadline and every launch takes the one
# process-global spawn lock.
borzoi-oracle-harness = { path = "../oracle-harness" }
proptest = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
